# laboratoriobd

./: docker-compose.yaml  etl.ipynb  etl.py  pyproject.toml  script-glue.py  script_dimensional.ddl
assets/scripts_auxiliares/: 1-operacional-oracle.ddl  5-postgres_dump.sql
init_db/: 1-operacional_psql.sql  2-operacional_public_departamentos.sql  4-operacional_public_disciplinas.sql  6-operacional_public_alunos.sql
initdb/: 1-operacional.sql  1-operacional_tabelas.sql  2-dimensional.sql  3-operacional_public_cursos.sql  5-operacional_public_matrizes_cursos.sql  7-operacional_public_matriculas.sql  8-dimensional.sql
scripts_auxiliares/: 3-unigrande_para_ees.sql  4-oracle_to_postgres.ipynb
scripts_auxiliares/1-scripts_UNIGRANDE/: tabelas_academico.sql
scripts_auxiliares/2-scripts_UNIGRANDE/: criacao_schema.sql
