[tool.poetry]
name = "laboratoriobd"
version = "0.1.0"
description = ""
authors = ["Natália Fonseca <nataliabf@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.37"
pandas = "^1.4.2"
pg8000 = "^1.29.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
